# Dotfiles

./: README.md
.config/kitty/: kitty.conf
.config/scripts/: newcpp
.config/scripts/CPP/: CMakeLists.txt  Makefile  main.cpp
.config/zsh/: .zshrc  zsh-alias.zsh
